--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve",
-    "lint": "eslint src/*"
+    "lint": "eslint src/*",
+    "test": "jest ./src"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,9 @@
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@types/jest": "^27.4.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
@@ -31,9 +35,11 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
+    "jest": "^27.5.1",
     "path": "^0.12.7",
     "prettier": "2.2.1",
     "style-loader": "^2.0.0",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.2",
     "webpack": "^5.24.2",
