--- a/package.json
+++ b/package.json
@@ -47,7 +47,12 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.24",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
