structured out with tests but ran into cors error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,8 @@
     ],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/no-array-index-key": "off"
   },
   "overrides": [
     {
