--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "start": "webpack serve",
     "lint": "eslint src/*",
-    "test": "jest ./src"
+    "test": "jest ./src", 
+    "test:watch": "jest ./src --watch"
   },
   "author": "",
   "license": "ISC",
@@ -47,6 +48,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/styled-components": "^5.1.24",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
